--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+[20190526]
+ * Add makefile CHANGELOG autogeneration function
+ * Add gtk-3.0 and metacity thumbnails; Fixes #29
+ * Symling metacity-theme-3.xml to metacity-theme-1.xml; Fixes #36
+ * Adjust metacity title buttons separation
+ * Fix metacity themes; Fixes #35, fixes #37
+ * Improve build.sh script
+ * Fix index.theme
+ * Add launchpad automated release
+ * Make color variant logos more visible
+ * Remove terminal installation
+
 [20190519]
  * Update flat-remix-gtk.spec version 20190519
  * 20190519
