--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+[20190825]
+ * Add shadow and border-radius to budgie-popover
+ * Add shadow to budgie panel
+ * Fix budgie-panel buttons' color
+ * Change Budgie panel running app indicator color
+ * Add transparency to budgie-panel
+
 [20190816]
  * Improve budgie panel and menu design
 
