--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+[20191108]
+ * Improve XFCE panel design
+
 [20191020]
  * Improve xfwm4 theme: larger borders for easyer resizing and improved assets
 
