--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+[20201001]
+ * Fix transparent terminal background
+
 [20200718]
  * Improve Makefile and debian packaging files
  * Change index.theme description
