Update CHANGELOG version 20211201

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+[20211201]
+ * GTK3: Improve scrollbar visibility
+
 [20211130]
  * Metacity: update window buttons assets
  * XFWM4: fix bottom corner assets
