--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+[20220427]
+ * Regenerate all themes
+ * Xfce: fix desktop color in themes with black selected_fg_color
+ * Update debian/control
+ * Update ubuntu release
+
 [20220412]
  * Regenerate all themes
  * GTK3: style nautilus 42 path-bar
